--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
       data-aos-duration="3000"
       data-aos-offset="500"
     >
-      <div class="container-fluid row">
+      <div
+        class="container-fluid row"
+        style="margin-left: 0px; margin-right: 0px"
+      >
         <div class="hero-img col-md-6">
           <img
             class="img-fluid stylish-img"
@@ -144,7 +147,11 @@
       </div>
     </div>
     <!-- About Us section -->
-    <div id="about" class="container-fluid row">
+    <div
+      id="about"
+      class="container-fluid row"
+      style="margin-left: 0px; margin-right: 0px"
+    >
       <div
         class="about-text col-lg-6"
         data-aos="fade-right"
@@ -471,7 +478,12 @@
     >
       <h2>Services</h2>
       <!-- Tabs plugin -->
-      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+      <ul
+        class="nav nav-pills mb-3"
+        id="pills-tab"
+        role="tablist"
+        style="justify-content: center"
+      >
         <li class="nav-item" role="presentation">
           <button
             class="service-tab nav-link active"
